@@ -30,6 +30,7 @@
 * Improved transfer speed averaging 
 * [L#212411] Fixed downloading multiple file lists (poy)
 * Added filter already shared from search results (thanks smir)
+* [L#206521] Fixed directory not being removable (thanks poy)
 
 -- 0.705 2008-03-14 --
 * Several patches for better *nix compatibility of the core (thanks steven sheehy et al)
